Massive re-factoring to make Stripes less invasive.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jspwiki/branches/JSPWIKI_2_9_STRIPES_BRANCH@682145 13f79535-47bb-0310-9956-ffa450edef68